--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Farming CBA Decision Aid - Newcastle Business School</title>
+  <title>Farming CBA Decision Aid Tool - Newcastle Business School</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -13,7 +13,7 @@
     <div class="brand">
       <div class="brand-mark">NBS</div>
       <div class="brand-text">
-        <div class="brand-title">Farming CBA Decision Aid</div>
+        <div class="brand-title">Farming CBA Decision Aid Tool</div>
         <div class="brand-subtitle">Newcastle Business School</div>
       </div>
     </div>
