--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="brand-mark" aria-hidden="true">F</div>
         <div class="brand-text">
           <div class="brand-title">Farming CBA Decision Tool</div>
-          <div class="brand-subtitle">Newcastle Business School · World Bank style view</div>
+          <div class="brand-subtitle">Newcastle Business School</div>
         </div>
       </div>
       <div class="header-meta">
